# extSQLite3

./: .gitignore  CMakeLists.txt  README.md
Bundle/debian/: changelog  clean  control  slang-sqlite3.install  slang-sqlite3.manpages  slang-sqlite3.substvars
Bundle/man/: extSlangSQLite3.7
CMake/: Base.cmake  Builder.cmake  Dependencies.cmake  Dependencies.cmake.tmp
Extension/: CMakeLists.txt  Defines.h  Extension.cpp  Extension.h  Sqlite3Close.h  Sqlite3Errcode.h  Sqlite3Errmsg.h  Sqlite3Exec.h  Sqlite3FieldCount.h  Sqlite3FieldSeek.h  Sqlite3FieldTell.h  Sqlite3FreeResult.h  Sqlite3GetFieldName.h  Sqlite3GetFieldValue.h  Sqlite3NextField.h  Sqlite3NextRow.h  Sqlite3Open.h  Sqlite3Rewind.h  Sqlite3RowCount.h  Sqlite3RowSeek.h  Sqlite3RowTell.h
SQLite3/: CMakeLists.txt  Defines.h  Extension.cpp  Extension.h  Sqlite3Close.h  Sqlite3Column.h  Sqlite3Errcode.h  Sqlite3Errmsg.h  Sqlite3Exec.h  Sqlite3FieldCount.h  Sqlite3FieldSeek.h  Sqlite3FieldTell.h  Sqlite3FreeResult.h  Sqlite3GetFieldName.h  Sqlite3GetFieldValue.h  Sqlite3NextField.h  Sqlite3NextRow.h  Sqlite3Open.h  Sqlite3Result.h  Sqlite3Rewind.h  Sqlite3Row.h  Sqlite3RowCount.h  Sqlite3RowSeek.h  Sqlite3RowTell.h  Types.cpp  Types.h
Tests/: sqlite3.os
